--- a/frontend/mission-ops/package.json
+++ b/frontend/mission-ops/package.json
@@ -16,9 +16,12 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.2",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "amazon-cognito-identity-js": "^3.0.7",
+    "aws-sdk": "^2.395.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
