--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -68,6 +68,247 @@ Resources:
             PrimaryKey:
                 Name: id
                 Type: String
+                AWSTemplateFormatVersion: "2010-09-09"
+
+    PassTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "PassID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "PassID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "Passes"
+
+    TelecommandTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "TelecommandID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "TelecommandID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "Telecommands"
+
+    PresetTelecommandTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "PresetTelecommandID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "PresetTelecommandID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "PresetTelecommands"
+
+    TelecommandBatchTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "TelecommandBatchID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "TelecommandBatchID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "TelecommandBatches"
+
+    QueuedTelecommandTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "QueuedTelecommandID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "QueuedTelecommandID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "QueuedTelecommands"
+
+    ImagesTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "ImageID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "ImageID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "Images"
+
+    SystemTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "SystemID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "SystemID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "Systems"
+
+    ComponentTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "ComponentID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "ComponentID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "Components"
+
+    TelemetryDataTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "TelemetryDataID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "TelemetryDataID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "TelemetryData"
+
+    TelemetryTypeTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "TelemetryTypeID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "TelemetryTypeID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "TelemetryTypes"
+
+    ComponentTelemetryTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "ComponentTelemetryID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "ComponentTelemetryID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "ComponentTelemetry"
+
+    TelemetryRangeTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "TelemetryRangeID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "TelemetryRangeID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "TelemetryRanges"
+
+    UserAlertSubscriptionTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "UserAlertSubscriptionID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "UserAlertSubscriptionID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "UserAlertSubscriptions"
+
+    UserTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "UserID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "UserID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "Users"
+
+    LogTable:
+        Type: AWS::DynamoDB::Table
+        Properties: 
+            AttributeDefinitions:
+                -
+                    AttributeName: "LogID"
+                    AttributeType: "S"
+            KeySchema:
+                -
+                    AttributeName: "LogID"
+                    KeyType: "HASH"
+            ProvisionedThroughput: 
+                ReadCapacityUnits: "5"
+                WriteCapacityUnits: "5"
+            TableName: "Logs"
     
     # Authentication Resources
     CognitoUserPool:
