Fixed error in cognito policy

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -345,7 +345,7 @@ Resources:
                             - 
                                 Effect: Allow
                                 Action:
-                                - cognito:ListUsers
+                                - cognito-idp:ListUsers
                                 Resource: !GetAtt CognitoUserPool.Arn
     
     CognitoIAMUserAccessKey:
