--- a/frontend/mission-ops/package.json
+++ b/frontend/mission-ops/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "amazon-cognito-identity-js": "^3.0.7",
+    "aws-sdk": "^2.399.0",
     "bootstrap": "^4.2.1",
+    "buffer": "^5.2.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -33,9 +35,9 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
