--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -346,6 +346,11 @@ Resources:
                                 Effect: Allow
                                 Action:
                                 - cognito-idp:ListUsers
+                                - cognito-idp:AdminCreateUser
+                                - cognito-idp:AdminDeleteUser
+                                - cognito-idp:AdminGetUser
+                                - cognito-idp:AdminResetUserPassword
+                                - cognito-idp:AdminUpdateUserAttributes
                                 Resource: !GetAtt CognitoUserPool.Arn
     
     CognitoIAMUserAccessKey:
