--- a/backend/cubesat-appserver/package.json
+++ b/backend/cubesat-appserver/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.408.0",
-    "chai-http": "^4.2.1"
+    "chai-http": "^4.2.1",
+    "express": "^4.16.4"
   },
   "scripts": {
     "test": "mocha tests/unit/"
