--- a/backend/cubesat-appserver/package.json
+++ b/backend/cubesat-appserver/package.json
@@ -8,7 +8,9 @@
   "dependencies": {
     "aws-sdk": "^2.408.0",
     "chai-http": "^4.2.1",
-    "express": "^4.16.4"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "mysql": "^2.16.0"
   },
   "scripts": {
     "test": "mocha tests/unit/"
