Temporarily disabled route guards on create user

--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -334,6 +334,9 @@ Resources:
                 -  
                     AttributeDataType: Boolean
                     Name: administrator
+                -
+                    AttributeDataType: String
+                    Name: preferredContactMethod
             UsernameAttributes: 
                 - email
             EmailVerificationSubject: 'Mission Control Verification'
