--- a/backend/cubesat-appserver/package.json
+++ b/backend/cubesat-appserver/package.json
@@ -10,7 +10,8 @@
     "chai-http": "^4.2.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "twilio": "^3.28.1"
   },
   "scripts": {
     "test": "mocha tests/unit/"
