--- a/backend/cubesat-appserver/package.json
+++ b/backend/cubesat-appserver/package.json
@@ -7,10 +7,12 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.408.0",
+    "bluebird": "^3.5.3",
     "chai-http": "^4.2.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "util": "^0.11.1"
   },
   "scripts": {
     "test": "mocha tests/unit/"
