--- a/backend/cubesat-appserver/package.json
+++ b/backend/cubesat-appserver/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.408.0",
+    "axios": "^0.18.0",
     "bluebird": "^3.5.3",
     "chai-http": "^4.2.1",
     "dotenv": "^6.2.0",
