--- a/frontend/mission-ops/package.json
+++ b/frontend/mission-ops/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@egjs/view360": "^3.2.1",
     "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "amazon-cognito-identity-js": "^3.0.7",
     "aws-sdk": "^2.399.0",
