--- a/frontend/mission-ops/package.json
+++ b/frontend/mission-ops/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^4.2.1",
     "buffer": "^5.2.1",
     "core-js": "^2.5.4",
+    "dateformat": "^3.0.3",
     "font-awesome": "^4.7.0",
     "highcharts": "^7.0.3",
     "highcharts-angular": "^2.4.0",
