--- a/backend/cubesat-appserver/package.json
+++ b/backend/cubesat-appserver/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
+    "tough-cookie": "^3.0.1",
     "twilio": "^3.29.1",
     "util": "^0.11.1"
   },
