--- a/frontend/mission-ops/package.json
+++ b/frontend/mission-ops/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.8",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -33,6 +33,7 @@
     "font-awesome": "^4.7.0",
     "highcharts": "^7.0.3",
     "highcharts-angular": "^2.4.0",
+    "ngx-toastr": "^9.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
