--- a/backend/cubesat-appserver/package.json
+++ b/backend/cubesat-appserver/package.json
@@ -12,6 +12,7 @@
     "chai-http": "^4.2.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "mysql": "^2.16.0",
     "tough-cookie": "^3.0.1",
     "twilio": "^3.29.1",
