--- a/frontend/mission-ops/package.json
+++ b/frontend/mission-ops/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.8",
+    "@angular/cdk": "^7.3.4",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -33,6 +34,11 @@
     "font-awesome": "^4.7.0",
     "highcharts": "^7.0.3",
     "highcharts-angular": "^2.4.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
+    "ng-pick-datetime": "^7.0.0",
+    "ng-pick-datetime-moment": "^1.0.8",
+    "ngx-moment": "^3.4.0",
     "ngx-toastr": "^9.2.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
