--- a/ground_station/package.json
+++ b/ground_station/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dev": "^0.1.3",
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "http": "0.0.0",
